# snf-news-aggregator

./: .claudemd  .env.example  .renderignore  ARCHITECTURE_CONTEXT.md  COMPREHENSIVE_DATA_SOURCES.md  CONTEXT.md  DATABASE_MIGRATION_GUIDE.md  DATA_SOURCES_INVENTORY.md  DEPLOY_TO_RENDER.md  DEVELOPMENT_ROADMAP.md  Dockerfile  IDEAS.md  PROGRESS.md  PROJECT_LOG.md  PROJECT_TRACKER.md  PROJECT_TRACKER_REBUILT.md  ProjectData_final.js  RENDER_DEPLOYMENT.md  TODO.md  check-article-urls.js  count-by-source.js  diagnose-duplicates.js  diagnostic-image-check.js  index.html  package-lock.json  package.json  render.yaml  test-decoder.js  test-redirect-resolution.js  update_all_tasks.js  update_tasks.js
Data/: Complete Task List.txt  Data Sources - All Data Sources.csv  Metrics.csv
docs/: NEWSLETTER_FEATURE.md  database-schema.md
idaho-alf-chatbot/: CITATION_FEATURES.md  CITATION_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  KNOWLEDGE_BASE_UPDATE_COMPLETE.md  KNOWLEDGE_BASE_UPDATE_SUMMARY.md  MODAL_UPDATE.md  RAG_IMPROVEMENTS_SUMMARY.md  RAG_PROCESS_EXPLAINED.md  UI_IMPROVEMENTS.md  check_deployment.sh  test_food_temperature.py  test_inline_citations.py
idaho-alf-chatbot/backend/: .env.example  add_food_code.py  add_new_documents.py  ai_service.py  claude_client.py  diagnose_rag.py  embeddings.py  main.py  process_food_code.py  pyproject.toml  rag_engine.py  rag_engine_improved.py  reprocess_all_documents.py  reprocess_log.txt  requirements.txt  setup.py  start.sh  test_updated_kb.py  txt_processor.py
public/: _redirects
server/: add-ma-columns.js  (+40 more)
(+211 files in other folders)
