[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idaho-alf-chatbot"
version = "1.0.0"
description = "Idaho ALF RegNavigator chatbot backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.4.2",
    "anthropic==0.34.0",
    "numpy==1.24.3",
    "requests==2.31.0",
    "openai==1.3.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "pytest==7.4.3",
    "httpx==0.25.2"
]
